--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.thingsboard</groupId>
     <artifactId>thingsboard</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Thingsboard</name>
-    <url>https://thingsboard.io</url>
-    <inceptionYear>2016</inceptionYear>
+    <name>Navity</name>
+    <url>https://www.navity.net</url>
+    <inceptionYear>2019</inceptionYear>
 
     <properties>
         <main.dir>${basedir}</main.dir>
@@ -174,32 +174,32 @@
                     <artifactId>maven-install-plugin</artifactId>
                     <version>3.0.0-M1</version>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <id>copy-protoc</id>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>copy</goal>
-                            </goals>
-                            <configuration>
-                                <artifactItems>
-                                    <artifactItem>
-                                        <groupId>com.google.protobuf</groupId>
-                                        <artifactId>protoc</artifactId>
-                                        <version>${protobuf.version}</version>
-                                        <classifier>${os.detected.classifier}</classifier>
-                                        <type>exe</type>
-                                        <overWrite>true</overWrite>
-                                        <outputDirectory>${project.build.directory}</outputDirectory>
-                                    </artifactItem>
-                                </artifactItems>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-dependency-plugin</artifactId>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <id>copy-protoc</id>-->
+<!--                            <phase>generate-sources</phase>-->
+<!--                            <goals>-->
+<!--                                <goal>copy</goal>-->
+<!--                            </goals>-->
+<!--                            <configuration>-->
+<!--                                <artifactItems>-->
+<!--                                    <artifactItem>-->
+<!--                                        <groupId>com.google.protobuf</groupId>-->
+<!--                                        <artifactId>protoc</artifactId>-->
+<!--                                        <version>${protobuf.version}</version>-->
+<!--                                        <classifier>${os.detected.classifier}</classifier>-->
+<!--                                        <type>exe</type>-->
+<!--                                        <overWrite>true</overWrite>-->
+<!--                                        <outputDirectory>${project.build.directory}</outputDirectory>-->
+<!--                                    </artifactItem>-->
+<!--                                </artifactItems>-->
+<!--                            </configuration>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
                 <plugin>
                     <groupId>org.xolstice.maven.plugins</groupId>
                     <artifactId>protobuf-maven-plugin</artifactId>
@@ -275,62 +275,62 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>com.mycila</groupId>
-                    <artifactId>license-maven-plugin</artifactId>
-                    <version>3.0</version>
-                    <configuration>
-                        <header>${main.dir}/license-header-template.txt</header>
-                        <properties>
-                            <owner>The Thingsboard Authors</owner>
-                        </properties>
-                        <excludes>
-                            <exclude>**/.env</exclude>
-                            <exclude>**/.eslintrc</exclude>
-                            <exclude>**/.babelrc</exclude>
-                            <exclude>**/.jshintrc</exclude>
-                            <exclude>**/.gradle/**</exclude>
-                            <exclude>**/nightwatch</exclude>
-                            <exclude>**/README</exclude>
-                            <exclude>**/LICENSE</exclude>
-                            <exclude>**/banner.txt</exclude>
-                            <exclude>node_modules/**</exclude>
-                            <exclude>**/*.properties</exclude>
-                            <exclude>src/test/resources/**</exclude>
-                            <exclude>src/vendor/**</exclude>
-                            <exclude>src/font/**</exclude>
-                            <exclude>src/sh/**</exclude>
-                            <exclude>src/main/scripts/control/**</exclude>
-                            <exclude>src/main/scripts/windows/**</exclude>
-                            <exclude>src/main/resources/public/static/rulenode/**</exclude>
-                            <exclude>**/*.proto.js</exclude>
-                            <exclude>docker/haproxy/**</exclude>
-                            <exclude>docker/tb-node/**</exclude>
-                        </excludes>
-                        <mapping>
-                            <proto>JAVADOC_STYLE</proto>
-                            <cql>DOUBLEDASHES_STYLE</cql>
-                            <scss>JAVADOC_STYLE</scss>
-                            <jsx>SLASHSTAR_STYLE</jsx>
-                            <conf>SCRIPT_STYLE</conf>
-                            <gradle>JAVADOC_STYLE</gradle>
-                        </mapping>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>com.mycila</groupId>-->
+<!--                    <artifactId>license-maven-plugin</artifactId>-->
+<!--                    <version>3.0</version>-->
+<!--                    <configuration>-->
+<!--                        <header>${main.dir}/license-header-template.txt</header>-->
+<!--                        <properties>-->
+<!--                            <owner>Navity</owner>-->
+<!--                        </properties>-->
+<!--                        <excludes>-->
+<!--                            <exclude>**/.env</exclude>-->
+<!--                            <exclude>**/.eslintrc</exclude>-->
+<!--                            <exclude>**/.babelrc</exclude>-->
+<!--                            <exclude>**/.jshintrc</exclude>-->
+<!--                            <exclude>**/.gradle/**</exclude>-->
+<!--                            <exclude>**/nightwatch</exclude>-->
+<!--                            <exclude>**/README</exclude>-->
+<!--                            <exclude>**/LICENSE</exclude>-->
+<!--                            <exclude>**/banner.txt</exclude>-->
+<!--                            <exclude>node_modules/**</exclude>-->
+<!--                            <exclude>**/*.properties</exclude>-->
+<!--                            <exclude>src/test/resources/**</exclude>-->
+<!--                            <exclude>src/vendor/**</exclude>-->
+<!--                            <exclude>src/font/**</exclude>-->
+<!--                            <exclude>src/sh/**</exclude>-->
+<!--                            <exclude>src/main/scripts/control/**</exclude>-->
+<!--                            <exclude>src/main/scripts/windows/**</exclude>-->
+<!--                            <exclude>src/main/resources/public/static/rulenode/**</exclude>-->
+<!--                            <exclude>**/*.proto.js</exclude>-->
+<!--                            <exclude>docker/haproxy/**</exclude>-->
+<!--                            <exclude>docker/tb-node/**</exclude>-->
+<!--                        </excludes>-->
+<!--                        <mapping>-->
+<!--                            <proto>JAVADOC_STYLE</proto>-->
+<!--                            <cql>DOUBLEDASHES_STYLE</cql>-->
+<!--                            <scss>JAVADOC_STYLE</scss>-->
+<!--                            <jsx>SLASHSTAR_STYLE</jsx>-->
+<!--                            <conf>SCRIPT_STYLE</conf>-->
+<!--                            <gradle>JAVADOC_STYLE</gradle>-->
+<!--                        </mapping>-->
+<!--                    </configuration>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <goals>-->
+<!--                                <goal>check</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>com.mycila</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.mycila</groupId>-->
+<!--                <artifactId>license-maven-plugin</artifactId>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
@@ -875,14 +875,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <distributionManagement>
-        <repository>
-            <id>thingsboard-repo-deploy</id>
-            <name>ThingsBoard Repo Deployment</name>
-            <url>https://repo.thingsboard.io/artifactory/libs-release-public</url>
-        </repository>
-    </distributionManagement>
 
     <repositories>
         <repository>
